force-app/main/default/objects/Deal_Registration__c/Deal_Registration__c.object-meta.xml
<CustomObject>
    <description>SOX object - Object used for Deal Registrations by Partners</description>
    <label>Deal Registration</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Deal Registration #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>