force-app/main/default/objects/Deal_Registration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registrations (Account)</relationshipLabel>
    <relationshipName>Deal_Registrations2</relationshipName>
    <type>Lookup</type>
</CustomField>