force-app/main/default/objects/Deal_Registration__c/fields/ActiveOwner__c.field-meta.xml
<CustomField>
    <fullName>ActiveOwner__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the current record owner an active user</inlineHelpText>
    <label>Active Owner</label>
    <type>Checkbox</type>
</CustomField>