force-app/main/default/objects/Deal_Registration__c/fields/ACV_at_Escalation__c.field-meta.xml
<CustomField>
    <fullName>ACV_at_Escalation__c</fullName>
    <description>Stamp value at time of Opportunity Association to Deal Registration</description>
    <label>ACV at Escalation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>