force-app/main/default/objects/Deal_Registration__c/fields/Alliance_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner_Name__c</fullName>
    <label>Alliance Partner Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>HPE</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>Nutanix</fullName>
            </value>
            <value>
                <fullName>Pure</fullName>
            </value>
            <value>
                <fullName>Security Alliances</fullName>
            </value>
            <value>
                <fullName>Arista</fullName>
                <isActive>false</isActive>
                <label>Arista</label>
            </value>
            <value>
                <fullName>Cisco</fullName>
                <isActive>false</isActive>
                <label>Cisco</label>
            </value>
            <value>
                <fullName>Cloudian</fullName>
                <isActive>false</isActive>
                <label>Cloudian</label>
            </value>
            <value>
                <fullName>IBM</fullName>
                <isActive>false</isActive>
                <label>IBM</label>
            </value>
            <value>
                <fullName>Infinidat</fullName>
                <isActive>false</isActive>
                <label>Infinidat</label>
            </value>
            <value>
                <fullName>Lenovo</fullName>
                <isActive>false</isActive>
                <label>Lenovo</label>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
                <isActive>false</isActive>
                <label>ServiceNow</label>
            </value>
            <value>
                <fullName>Tegile</fullName>
                <isActive>false</isActive>
                <label>Tegile</label>
            </value>
            <value>
                <fullName>Tintri</fullName>
                <isActive>false</isActive>
                <label>Tintri</label>
            </value>
            <value>
                <fullName>VMWare</fullName>
                <isActive>false</isActive>
                <label>VMWare</label>
            </value>
            <value>
                <fullName>Zerto</fullName>
                <isActive>false</isActive>
                <label>Zerto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>