force-app/main/default/objects/Deal_Registration__c/fields/Alliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Type__c</fullName>
    <label>Alliance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>