force-app/main/default/objects/Deal_Registration__c/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <formula>IF(ISBLANK(Account__r.SegmentRevenue__c),Lead__r.AnnualRevenue,Account__r.SegmentRevenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated based on Account Annual Revenue. If Blank, calculated from Lead Annual Revenue.</inlineHelpText>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>