force-app/main/default/objects/Deal_Registration__c/fields/Approval_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Approval_Timestamp__c</fullName>
    <label>Status Change Timestamp</label>
    <type>DateTime</type>
</CustomField>