force-app/main/default/objects/Deal_Registration__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>We no longer need the TART fields that come from Patch Manager (confirmed by ChannelOps - Gregg Schroeder).</description>
    <formula>TEXT(PatchManager__r.TLevel2__c)</formula>
    <label>(DEPRECATED) Area</label>
    <type>Text</type>
</CustomField>