force-app/main/default/objects/Deal_Registration__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision-maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Budget owner</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>