force-app/main/default/objects/Deal_Registration__c/fields/Auto_Registered_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Auto_Registered_from_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when DR is auto-created for Microsoft from opportunity</description>
    <label>Auto Registered from Opportunity</label>
    <type>Checkbox</type>
</CustomField>