force-app/main/default/objects/Deal_Registration__c/fields/AVP__c.field-meta.xml
<CustomField>
    <fullName>AVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://rubrik.atlassian.net/browse/PRIT26-109</description>
    <label>AVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations7</relationshipName>
    <type>Lookup</type>
</CustomField>