force-app/main/default/objects/Deal_Registration__c/fields/AWS_Marketplace_Registration__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(DEPRECATED)AWS Marketplace Registration</label>
    <type>Checkbox</type>
</CustomField>