force-app/main/default/objects/Deal_Registration__c/fields/BDM__c.field-meta.xml
<CustomField>
    <fullName>BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BDM for the Alliance DR</description>
    <label>BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations2</relationshipName>
    <type>Lookup</type>
</CustomField>