force-app/main/default/objects/Deal_Registration__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>(DEPRECATED) Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $10,000</fullName>
            </value>
            <value>
                <fullName>$10,000 - $25,000</fullName>
            </value>
            <value>
                <fullName>$25,000 - $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000 - $75,000</fullName>
            </value>
            <value>
                <fullName>$75,000 - $100,000</fullName>
            </value>
            <value>
                <fullName>$100,000+</fullName>
            </value>
            <value>
                <fullName>$0 - $100,000</fullName>
            </value>
            <value>
                <fullName>$100,000 - $200,000</fullName>
            </value>
            <value>
                <fullName>$200,000 - $300,000</fullName>
            </value>
            <value>
                <fullName>$300,000 - $400,000</fullName>
            </value>
            <value>
                <fullName>$400,000 - $500,000</fullName>
            </value>
            <value>
                <fullName>&gt;$500,000</fullName>
            </value>
            <value>
                <fullName>Not known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>