force-app/main/default/objects/Deal_Registration__c/fields/Buyer_Group__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Group__c</fullName>
    <description>Created as part of PRIT26-543</description>
    <inlineHelpText>What team is involved in decision-making?</inlineHelpText>
    <label>Buyer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT &amp; Infrastructure</fullName>
            </value>
            <value>
                <fullName>Security &amp; Cyber Resilience</fullName>
            </value>
            <value>
                <fullName>Cloud &amp; DevOps</fullName>
            </value>
            <value>
                <fullName>Financial Leadership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>