force-app/main/default/objects/Deal_Registration__c/fields/CDM_Email__c.field-meta.xml
<CustomField>
    <fullName>CDM_Email__c</fullName>
    <label>CDM Email</label>
    <type>Email</type>
</CustomField>