force-app/main/default/objects/Deal_Registration__c/fields/CDM_Manager__c.field-meta.xml
<CustomField>
    <fullName>CDM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the manager.Id for the CDM field on Deal Registration</description>
    <label>CDM Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations8</relationshipName>
    <type>Lookup</type>
</CustomField>