force-app/main/default/objects/Deal_Registration__c/fields/CDM_Territory__c.field-meta.xml
<CustomField>
    <fullName>CDM_Territory__c</fullName>
    <description>PRIT24-315</description>
    <label>CDM Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>