force-app/main/default/objects/Deal_Registration__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registrations (Company Name)</relationshipLabel>
    <relationshipName>Deal_Registrations4</relationshipName>
    <type>Lookup</type>
</CustomField>