force-app/main/default/objects/Deal_Registration__c/fields/Conversion_Result__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Result__c</fullName>
    <label>Conversion Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>