force-app/main/default/objects/Deal_Registration__c/fields/Current_Backup_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Current_Backup_Vendor__c</fullName>
    <label>(DEPRECATED) Current Backup Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actifio</fullName>
            </value>
            <value>
                <fullName>Arcserve</fullName>
            </value>
            <value>
                <fullName>Clumio</fullName>
            </value>
            <value>
                <fullName>Cohesity</fullName>
            </value>
            <value>
                <fullName>Commvault</fullName>
            </value>
            <value>
                <fullName>DellEMC Avamar</fullName>
            </value>
            <value>
                <fullName>DellEMC DataDomain</fullName>
            </value>
            <value>
                <fullName>DellEMC IDPA</fullName>
            </value>
            <value>
                <fullName>Did not ask</fullName>
            </value>
            <value>
                <fullName>Druva</fullName>
            </value>
            <value>
                <fullName>IBM Spectrum Project (TSM)</fullName>
            </value>
            <value>
                <fullName>Unitrends</fullName>
            </value>
            <value>
                <fullName>Veeam</fullName>
            </value>
            <value>
                <fullName>Veritas BackupExec</fullName>
            </value>
            <value>
                <fullName>Veritas NetBackup</fullName>
            </value>
            <value>
                <fullName>Zerto</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Avamar</fullName>
                <isActive>false</isActive>
                <label>Avamar</label>
            </value>
            <value>
                <fullName>BackupExec</fullName>
                <isActive>false</isActive>
                <label>BackupExec</label>
            </value>
            <value>
                <fullName>DataDomain</fullName>
                <isActive>false</isActive>
                <label>DataDomain</label>
            </value>
            <value>
                <fullName>Exagrid</fullName>
                <isActive>false</isActive>
                <label>Exagrid</label>
            </value>
            <value>
                <fullName>Greenfield</fullName>
                <isActive>false</isActive>
                <label>Greenfield</label>
            </value>
            <value>
                <fullName>NetBackup</fullName>
                <isActive>false</isActive>
                <label>NetBackup</label>
            </value>
            <value>
                <fullName>Networker</fullName>
                <isActive>false</isActive>
                <label>Networker</label>
            </value>
            <value>
                <fullName>TSM</fullName>
                <isActive>false</isActive>
                <label>TSM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>