force-app/main/default/objects/Deal_Registration__c/fields/Current_Storage_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Current_Storage_Vendor__c</fullName>
    <label>(DEPRECATED) Current Storage Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMC</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Pure Storage</fullName>
            </value>
            <value>
                <fullName>Tegile</fullName>
            </value>
            <value>
                <fullName>Tintri</fullName>
            </value>
            <value>
                <fullName>Nimble</fullName>
            </value>
            <value>
                <fullName>Nutanix</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>