force-app/main/default/objects/Deal_Registration__c/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State &amp; Local Govt/Education</fullName>
            </value>
            <value>
                <fullName>Federal Govt</fullName>
            </value>
            <value>
                <fullName>Commercial/Enterprise</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>