force-app/main/default/objects/Deal_Registration__c/fields/Customer_Needs__c.field-meta.xml
<CustomField>
    <fullName>Customer_Needs__c</fullName>
    <label>Customer Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>