force-app/main/default/objects/Deal_Registration__c/fields/dataComJson__c.field-meta.xml
<CustomField>
    <fullName>dataComJson__c</fullName>
    <label>dataComJson</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>