force-app/main/default/objects/Deal_Registration__c/fields/Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Event__c</fullName>
    <label>(DEPRECATED) Date of Event</label>
    <type>Date</type>
</CustomField>