force-app/main/default/objects/Deal_Registration__c/fields/DatosIO_Registration__c.field-meta.xml
<CustomField>
    <fullName>DatosIO_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DatosIO Registration</label>
    <type>Checkbox</type>
</CustomField>