force-app/main/default/objects/Deal_Registration__c/fields/Day_at_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Day_at_Email_Sent__c</fullName>
    <formula>If(!ISNULL(Deal_Registration_Expiration__c) &amp;&amp; (Deal_Registration_Expiration__c) - TODAY()  &lt;= 0,&apos;0&apos;,If(!ISNULL(Deal_Registration_Expiration__c ) &amp;&amp; ( Deal_Registration_Expiration__c) - TODAY() &gt;= 29,&apos;30&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day at Email Sent</label>
    <type>Text</type>
</CustomField>