force-app/main/default/objects/Deal_Registration__c/fields/Days_Before_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Expiration__c</fullName>
    <description>Provides number of days remained for deal expiry</description>
    <formula>Deal_Registration_Expiration__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Before Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>