force-app/main/default/objects/Deal_Registration__c/fields/Deal_Reg_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Exp_Date__c</fullName>
    <label>Deal Reg Exp Date</label>
    <type>Date</type>
</CustomField>