force-app/main/default/objects/Deal_Registration__c/fields/Deal_Reg_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Submitted_Date__c</fullName>
    <label>Deal Reg Submitted Date</label>
    <type>DateTime</type>
</CustomField>