force-app/main/default/objects/Deal_Registration__c/fields/Deal_Registration_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Expiration__c</fullName>
    <formula>NULLVALUE(Deal_Reg_Exp_Date__c , DATEVALUE(Approval_Timestamp__c) +90)</formula>
    <label>Deal Registration Expiration</label>
    <type>Date</type>
</CustomField>