force-app/main/default/objects/Deal_Registration__c/fields/Deal_Registration_Extension_Request__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Extension_Request__c</fullName>
    <label>Deal Registration Extension Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deal_Registration_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Meeting Ext. Req. for next 10 Days</fullName>
            </value>
            <value>
                <fullName>1st Deal Reg Ext. Req. for next 10 Days</fullName>
                <isActive>false</isActive>
                <label>1st Deal Reg Ext. Req. for next 10 Days</label>
            </value>
            <value>
                <fullName>1st Deal Reg Ext. Req. for next 45 Days</fullName>
                <isActive>false</isActive>
                <label>1st Deal Reg Ext. Req. for next 45 Days</label>
            </value>
            <value>
                <fullName>1st Meeting Ext. Req. for next 10 Days</fullName>
                <isActive>false</isActive>
                <label>1st Meeting Ext. Req. for next 10 Days</label>
            </value>
            <value>
                <fullName>2nd Deal Reg Ext. Req. for next 10 Days</fullName>
                <isActive>false</isActive>
                <label>2nd Deal Reg Ext. Req. for next 10 Days</label>
            </value>
            <value>
                <fullName>2nd Deal Reg Ext. Req. for next 45 Days</fullName>
                <isActive>false</isActive>
                <label>2nd Deal Reg Ext. Req. for next 45 Days</label>
            </value>
            <value>
                <fullName>2nd Meeting Ext. Req. for next 10 Days</fullName>
                <isActive>false</isActive>
                <label>2nd Meeting Ext. Req. for next 10 Days</label>
            </value>
            <value>
                <fullName>3rd Deal Reg Ext. Req. for next 45 Days</fullName>
                <isActive>false</isActive>
                <label>3rd Deal Reg Ext. Req. for next 45 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>