force-app/main/default/objects/Deal_Registration__c/fields/Deal_Registration_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Owner_Email__c</fullName>
    <formula>Owner:User.Email</formula>
    <label>Deal Registration Owner Email</label>
    <type>Text</type>
</CustomField>