force-app/main/default/objects/Deal_Registration__c/fields/Deal_Registration_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Sub_Status__c</fullName>
    <label>Deal Registration Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extension Requested</fullName>
            </value>
            <value>
                <fullName>Extension Approved</fullName>
            </value>
            <value>
                <fullName>Extension Rejected</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Admin</fullName>
            </value>
            <value>
                <fullName>Pending Artifact Upload</fullName>
            </value>
            <value>
                <fullName>Pending RSM Approval</fullName>
            </value>
            <value>
                <fullName>Pending L1 Approval</fullName>
            </value>
            <value>
                <fullName>Pending TVP Approval</fullName>
            </value>
            <value>
                <fullName>RSM Approved</fullName>
            </value>
            <value>
                <fullName>RSM Rejected</fullName>
            </value>
            <value>
                <fullName>Pending RVP Approval</fullName>
            </value>
            <value>
                <fullName>RVP Approved</fullName>
            </value>
            <value>
                <fullName>RVP Rejected</fullName>
            </value>
            <value>
                <fullName>GSI-NDA Pending Approval</fullName>
            </value>
            <value>
                <fullName>Auto - Expired</fullName>
                <isActive>false</isActive>
                <label>Auto - Expired</label>
            </value>
            <value>
                <fullName>SLA Violation</fullName>
                <isActive>false</isActive>
                <label>SLA Violation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>