force-app/main/default/objects/Deal_Registration__c/fields/Deal_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Type__c</fullName>
    <label>Deal Initiated Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Sourced New Logo (PSNL)</fullName>
            </value>
            <value>
                <fullName>Partner Sourced Expand</fullName>
            </value>
            <value>
                <fullName>Rubrik Sourced</fullName>
            </value>
            <value>
                <fullName>Joint Initiated Deal</fullName>
                <isActive>false</isActive>
                <label>Joint Initiated Deal</label>
            </value>
            <value>
                <fullName>Partner Initiated Deal</fullName>
                <isActive>false</isActive>
                <label>Partner Initiated Deal</label>
            </value>
            <value>
                <fullName>Rubrik Initiated Deal</fullName>
                <isActive>false</isActive>
                <label>Rubrik Initiated Deal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>