force-app/main/default/objects/Deal_Registration__c/fields/Deal_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Source__c</fullName>
    <description>Created as part of PRIT26-543</description>
    <inlineHelpText>How was this opportunity identified?</inlineHelpText>
    <label>Deal Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interlock</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Brought in by Rubrik AE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>