force-app/main/default/objects/Deal_Registration__c/fields/Dedicated_Managed_Service__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Managed_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Managed Service</label>
    <type>Checkbox</type>
</CustomField>