force-app/main/default/objects/Deal_Registration__c/fields/Distributor_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Company_Name__c</fullName>
    <label>Distributor Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>