force-app/main/default/objects/Deal_Registration__c/fields/Distributor_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Rep_Email__c</fullName>
    <label>Distributor Rep Email</label>
    <type>Email</type>
</CustomField>