force-app/main/default/objects/Deal_Registration__c/fields/Distributor_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Rep_Name__c</fullName>
    <label>Distributor Rep Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>