force-app/main/default/objects/Deal_Registration__c/fields/Distributor_Rep_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Rep_Phone_Number__c</fullName>
    <label>Distributor Rep Phone Number</label>
    <type>Phone</type>
</CustomField>