force-app/main/default/objects/Deal_Registration__c/fields/Distributor_Secondary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Secondary_Email_Address__c</fullName>
    <label>Distributor Secondary Email Address</label>
    <type>Email</type>
</CustomField>