force-app/main/default/objects/Deal_Registration__c/fields/DR_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Approved_Date__c</fullName>
    <label>Approval Timestamp</label>
    <type>DateTime</type>
</CustomField>