force-app/main/default/objects/Deal_Registration__c/fields/DR_Comments__c.field-meta.xml
<CustomField>
    <fullName>DR_Comments__c</fullName>
    <description>Pending/Rejection Comments for Deal Registration</description>
    <inlineHelpText>Internal Only</inlineHelpText>
    <label>Deal Registration Activity Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>