force-app/main/default/objects/Deal_Registration__c/fields/End_User_attend_a_Marketing_Event__c.field-meta.xml
<CustomField>
    <fullName>End_User_attend_a_Marketing_Event__c</fullName>
    <label>DEP End User attend a Marketing Event?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>