force-app/main/default/objects/Deal_Registration__c/fields/Engaged_with_Rubrik__c.field-meta.xml
<CustomField>
    <fullName>Engaged_with_Rubrik__c</fullName>
    <label>Engaged with Rubrik</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>