force-app/main/default/objects/Deal_Registration__c/fields/ETM_Area__c.field-meta.xml
<CustomField>
    <fullName>ETM_Area__c</fullName>
    <description>ETM Area</description>
    <formula>IF( !ISBLANK(Company_Name__c) , Company_Name__r.ETM_Area__c,  TEXT(PatchManager__r.TLevel2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETM Area</label>
    <type>Text</type>
</CustomField>