force-app/main/default/objects/Deal_Registration__c/fields/ETM_Region__c.field-meta.xml
<CustomField>
    <fullName>ETM_Region__c</fullName>
    <description>ETM Region</description>
    <formula>IF( !ISBLANK(Company_Name__c) , Company_Name__r.ETM_Region__c, TEXT(PatchManager__r.TLevel3__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETM Region</label>
    <type>Text</type>
</CustomField>